po: update po/cy_GB/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/mailing.po
+++ b/po/cy_GB/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-02 13:47+0000\n"
+"PO-Revision-Date: 2017-02-17 11:49+0000\n"
 "Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -1166,67 +1166,67 @@ msgstr "Cadw Fel"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Cyfeiriad ebost"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Dad-tanysgrifio Grŵp"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Dim cynnwys i weld rhagolwg"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Rhagolwg fel HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Rhagolwg fel Testun Plaen"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Anfon ebost prawf at:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Ebost Prawf"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Anfon neges brawf at %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Anfon prawf"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Anfon ebost prawf at grŵp"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Anfon neges prawf at grŵp"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Anfon at %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Anfonir neges brawf at %1 o bobl:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
-msgstr ""
+msgstr "Nid oes cyfeiriad ebost gan yr un o'r cysylltiadau yn y grŵp hwn."
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "Mae'r grŵp yn wag."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
-msgstr ""
+msgstr "Gweld rhagolwg o Restr Derbynwyr"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
