po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 11:04+0000\n"
+"PO-Revision-Date: 2017-02-17 15:53+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2376,7 +2376,7 @@ msgstr "Nevažeći tip veze"
 
 #: CRM/Contact/Controller/Search.php
 msgid "Because your session timed out, we have reset the search page."
-msgstr ""
+msgstr "Pošto je vaša sesija gotova, resetovali smo stranicu za pretragu."
 
 #: CRM/Contact/DAO/Contact.php CRM/Core/SelectValues.php
 msgid "Internal Contact ID"
@@ -2417,7 +2417,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/Contact.php
 msgid "External Identifier"
-msgstr " "
+msgstr " Eksterni identifikator"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Sort Name"
@@ -4485,9 +4485,9 @@ msgid ""
 msgid_plural ""
 "One or more selected contacts have address records which are shared with "
 "%count other contacts."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Jedan od izabranih kontakata ima adresu koju deli sa još 1 kontaktom."
+msgstr[1] "Jedan ili više izabranih kontakata imaju adresu koju dele sa još %count drugih kontakata."
+msgstr[2] "Jedan ili više izabranih kontakata imaju adresu koju dele sa još %count drugih kontakata."
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid ""
@@ -4495,9 +4495,9 @@ msgid ""
 msgid_plural ""
 "This contact has an address record which is shared with %count other "
 "contacts."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Ovaj kontakt ima adresu koju deli sa još 1 kontaktom."
+msgstr[1] "Ovaj kontakt ima adresu koju deli sa %count drugih kontakata."
+msgstr[2] "Ovaj kontakt ima adresu koju deli sa %count drugih kontakata."
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid ""
@@ -6274,11 +6274,11 @@ msgid ""
 "href=\"%1\">Administer CiviCRM &raquo; Communications &raquo; FROM Email "
 "Addresses</a>. The email address used may need to be a valid mail account "
 "with your email service provider."
-msgstr ""
+msgstr "Administrator sajta mora da unese ispravnu 'OD email adresu' u <a href=\"%1\">Administriraj CiviCRM&raquo; Komunikacije &raquo; OD email adrese</a>. Email adrese koje se koriste moraju imati važeći mail nalog sa vašim email provajderom."
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Ext."
-msgstr "Ext."
+msgstr "Lokal"
 
 #: CRM/Core/BAO/UFMatch.php
 msgid ""
@@ -6433,7 +6433,7 @@ msgid ""
 "submission. We have returned you to the initial step so you can complete and"
 " resubmit the form. If you experience continued difficulties, please contact"
 " us for assistance."
-msgstr ""
+msgstr "Vaša sesija je istekla i ne možemo da završimo vaše slanje formulara. Vratili smo vas na početni korak tako d amožete da popunite i ponovo pošaljete svoj formular. Ukoliko i dalje budete imali poteškoća, kontaktirajte nas."
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Date Time"
@@ -7565,7 +7565,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Phone.php
 msgid "Is Phone Primary?"
-msgstr ""
+msgstr "Da li je Telefon primaran?"
 
 #: CRM/Core/DAO/Phone.php
 msgid "Is Billing Phone"
@@ -7982,7 +7982,7 @@ msgstr ""
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "Word Replacement is Active"
-msgstr ""
+msgstr "Zamena za reči je aktivna"
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "Word Replacement Match Type"
@@ -8475,7 +8475,7 @@ msgstr "Država/pokrajina se ne polapa sa odabranom zemljom"
 
 #: CRM/Core/Form.php
 msgid "County does not match the selected State/Province"
-msgstr ""
+msgstr "Okrug ne odgovara izabranoj Državi/Pokrajini."
 
 #: CRM/Core/I18n/Form.php templates/CRM/Core/I18n/Dialog.tpl
 #: xml/templates/languages.tpl
@@ -8838,7 +8838,7 @@ msgid ""
 " email for a receipt from Authorize.net.  If you do not receive a receipt "
 "within 2 hours you can try your transaction again.  If you continue to have "
 "problems please contact the site administrator."
-msgstr ""
+msgstr "Izgleda da je ova transakcija duplikat. Da li ste već jednom poslali formular? Ukoliko jeste, možda je došlo do problema sa vezom. Proverite u svom emailu da li ste dobili račun od Authorize.net. Ako ne dobijete račun u naredna 2 sata, možete ponovo pokušati da izvršite transakciju. Ukoliko i dalje budete imali probleme, kontaktirajte administratora sajta."
 
 #: CRM/Core/Payment/Realex.php
 msgid "Could not initiate connection to payment gateway"
@@ -8871,7 +8871,7 @@ msgid ""
 "email for a receipt for this transaction.  If you do not receive a receipt "
 "within 2 hours you can try your transaction again.  If you continue to have "
 "problems please contact the site administrator."
-msgstr ""
+msgstr "Izgleda da je ova transakcija duplikat. Da li ste već jednom poslali formular? Ukoliko jeste, možda je došlo do problema sa vezom. Proverite u svom emailu da li ste dobili račun za ovu transakciju. Ako ne dobijete račun u naredna 2 sata, možete ponovo pokušati da izvršite transakciju. Ukoliko i dalje budete imali probleme, kontaktirajte administratora sajta."
 
 #: CRM/Core/Payment/Realex.php
 msgid ""
@@ -8987,7 +8987,7 @@ msgstr "pregledaj sve kontakte"
 msgid ""
 "View ANY CONTACT in the CiviCRM database, export contact info and perform "
 "activities such as Send Email, Phone Call, etc."
-msgstr ""
+msgstr "Pogledajte BILO KOJI KONTAKT u CiviCRM bazi, eksportujte informacije o kontaktima i izvršite aktivnosti kao što su Pošalji email, Poziv, itd."
 
 #: CRM/Core/Permission.php
 msgid "edit all contacts"
@@ -8997,7 +8997,7 @@ msgstr "uredi sve kontakte"
 msgid ""
 "View, Edit and Delete ANY CONTACT in the CiviCRM database; Create and edit "
 "relationships, tags and other info about the contacts"
-msgstr ""
+msgstr "Pogledajte BILO KOJI KONTAKT u CiviCRM bazi; Kreirajte i editujte odnose-veze, tagove i druge informacije o kontaktima"
 
 #: CRM/Core/Permission.php
 msgid "view my contact"
@@ -10140,7 +10140,7 @@ msgstr "Radio"
 #: CRM/Upgrade/Snapshot/V4p2/Price/BAO/Field.php
 #: CRM/Upgrade/Snapshot/V4p2/Price/DAO/Field.php
 msgid "CheckBox"
-msgstr ""
+msgstr "Kućica"
 
 #: CRM/Custom/Form/Field.php
 msgid "Adv Multi-Select (obsolete)"
@@ -10363,17 +10363,17 @@ msgstr "Unesite odgovarajuću novčanu vrednost."
 msgid ""
 "You must select a Multiple Choice Option set if you chose Reuse an existing "
 "set."
-msgstr ""
+msgstr "Morate odabrati set Opcije za višestruki izbor ako ste izabrali Koristi postojeći set."
 
 #: CRM/Custom/Form/Field.php
 msgid ""
 "The data type of the multiple choice option set you've selected does not "
 "match the data type assigned to this field."
-msgstr ""
+msgstr "Tip podataka za izabrani set opcija za višestruki izbor ne odgovara tipu podataka koji je dodeljen za ovo polje."
 
 #: CRM/Custom/Form/Field.php
 msgid "Can not set this field Required and View Only at the same time."
-msgstr ""
+msgstr "Ne možete istovremeno podesiti ovo polje kao Obavezno i Samo za pregled."
 
 #: CRM/Custom/Form/Field.php
 msgid "Custom field '%1' has been saved."
@@ -10541,7 +10541,7 @@ msgstr "Ovo polje je neaktivno i neće biti prikazano u formularu za uređivanje
 #: CRM/Custom/Form/Preview.php CRM/Price/Form/Preview.php
 #: CRM/UF/Form/Preview.php
 msgid "Done with Preview"
-msgstr ""
+msgstr "Završi sa pregledanjem"
 
 #: CRM/Custom/Import/Form/DataSource.php
 msgid "Multi-value Custom Data"
@@ -10569,7 +10569,7 @@ msgstr ""
 
 #: CRM/Custom/Page/Field.php
 msgid "Preview Field Display"
-msgstr ""
+msgstr "Pogledaj prikaz polja"
 
 #: CRM/Custom/Page/Field.php
 msgid "Preview Custom Field"
@@ -10641,27 +10641,27 @@ msgstr "Uredi opciju"
 
 #: CRM/Custom/Page/Option.php
 msgid "Edit Multiple Choice Option"
-msgstr ""
+msgstr "Uredi opciju za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "View Multiple Choice Option"
-msgstr ""
+msgstr "Pogledaj opciju za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "Disable Mutliple Choice Option"
-msgstr ""
+msgstr "Isključi opciju za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "Enable Mutliple Choice Option"
-msgstr ""
+msgstr "Uključi opciju za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "Disable Multiple Choice Option"
-msgstr ""
+msgstr "Isključi opciju za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "%1 - Multiple Choice Options"
-msgstr ""
+msgstr "%1 - Opcije za višestruki izbor"
 
 #: CRM/Custom/Page/Option.php
 msgid "Custom Option"
@@ -10909,13 +10909,13 @@ msgid ""
 "telling your friends. Use the space below to personalize your email message "
 "- let your friends know why you support us. Then fill in the name(s) and "
 "email address(es) and click 'Send Your Message'."
-msgstr ""
+msgstr "Pomozite nam da upotrebimo moć vašeg doprinosa i proširimo priču tako što ćete je podeliti sa svojim prijateljima. Upotrebite prostor ispod da personalizujete svoju email poruku - recite svojim prijateljima da ćete prisustvovati događaju. Zatim popunite ime(na) i email adresu(e) i kliknite na 'Pošalji svoju poruku'."
 
 #: CRM/Friend/Form/Contribute.php
 msgid ""
 "Thought you might be interested in learning about and helping this "
 "organization. I think they do important work."
-msgstr ""
+msgstr "Mislio/la sam da će te interesovati da čuješ o ovoj organizaciji i pomogneš joj. Mislim da rade važnu stvar."
 
 #: CRM/Friend/Form/Contribute.php
 msgid ""
@@ -10925,28 +10925,28 @@ msgstr ""
 
 #: CRM/Friend/Form/Contribute.php CRM/Friend/Form/Event.php
 msgid "Thanks for Spreading the Word"
-msgstr ""
+msgstr "Hvala što ste podelili"
 
 #: CRM/Friend/Form/Event.php
 msgid ""
 "Help us spread the word about this event. Use the space below to personalize"
 " your email message - let your friends know why you're attending. Then fill "
 "in the name(s) and email address(es) and click 'Send Your Message'."
-msgstr ""
+msgstr "Pomozite nam da širimo vest o ovom događaju. Upotrebite prostor ispod da personalizujete svoju email poruku - recite svojim prijateljima da ćete prisustvovati događaju. Zatim popunite ime(na) i email adresu(e) i kliknite na 'Pošalji svoju poruku'."
 
 #: CRM/Friend/Form/Event.php
 msgid ""
 "Thought you might be interested in checking out this event. I'm planning on "
 "attending."
-msgstr ""
+msgstr "Mislio/la sam da će te interesovati da čuješ za ovaj događaj. Ja planiram da prisustvujem."
 
 #: CRM/Friend/Form/Event.php
 msgid "Thanks for spreading the word about this event to your friends."
-msgstr ""
+msgstr "Hvala što ste vest o ovom događaju podelili sa svojim prijateljima."
 
 #: CRM/Friend/Form.php
 msgid "Tell Friend is disable for this Personal Campaign Page"
-msgstr ""
+msgstr "Opcija Recite prijateljima je isključena za ovu Stranicu lične kampanje."
 
 #: CRM/Friend/Form.php
 msgid "page argument missing or invalid"
@@ -11000,7 +11000,7 @@ msgstr "Unesite email adresu prijatelja/prijateljice."
 msgid ""
 "Please enter at least one friend's information, or click Cancel if you don't"
 " want to send emails at this time."
-msgstr ""
+msgstr "Unesite podatke za bar jednog prijatelja ili kliknite na Otkaži ako ne želite da šaljete emailove u ovom trenutku."
 
 #: CRM/Friend/Form.php
 msgid "Thank you for your support"
@@ -11009,7 +11009,7 @@ msgstr "Hvala vam na podršci"
 #: CRM/Friend/Form.php
 msgid ""
 "Thanks for supporting this campaign by spreading the word to your friends."
-msgstr ""
+msgstr "Hvala što podržavate ovu kampanju tako što ste je podelili sa svojim prijateljima."
 
 #: CRM/Group/Form/Edit.php
 msgid "Manage Groups"
@@ -11277,11 +11277,11 @@ msgstr ""
 
 #: CRM/Price/DAO/PriceField.php
 msgid "Price Field ID"
-msgstr ""
+msgstr "ID Polja za cenu"
 
 #: CRM/Price/DAO/PriceField.php CRM/Price/Page/Set.php
 msgid "Price Set"
-msgstr ""
+msgstr "Set cena"
 
 #: CRM/Price/DAO/PriceField.php CRM/Upgrade/Snapshot/V4p2/Price/DAO/Field.php
 msgid "Html Type"
@@ -11595,7 +11595,7 @@ msgid ""
 "can not also use it for Events or Contributions. However, a membership price"
 " set may include additional fields for non-membership options that require "
 "an additional fee (e.g. magazine subscription)."
-msgstr ""
+msgstr "Ukoliko planirate da koristite ovaj set cena za prijave i obnovu članstva, ne možete ga koristiti i za Događaje i Donacije. Međutim, set cena za članstvo može imati dodatna polja za opcije nevezane za članstvo koje zahtevaju dodatnu uplatu (npr. pretplata za magazin)."
 
 #: CRM/Price/Form/Set.php
 msgid "Default Financial Type"
@@ -11623,11 +11623,11 @@ msgstr "Uredi cenu"
 
 #: CRM/Price/Page/Field.php
 msgid "Preview Field"
-msgstr ""
+msgstr "Pogledaj polje"
 
 #: CRM/Price/Page/Field.php
 msgid "Preview Price"
-msgstr ""
+msgstr "Pogledaj cenu"
 
 #: CRM/Price/Page/Field.php
 msgid "Disable Price"
@@ -11667,7 +11667,7 @@ msgstr "Uključi opciju cene"
 
 #: CRM/Price/Page/Option.php
 msgid "Price Field Option"
-msgstr ""
+msgstr "Opcija polja za cene"
 
 #: CRM/Price/Page/Option.php
 msgid "Price Fields"
@@ -11691,7 +11691,7 @@ msgstr "Pregledaj i uredi polja za cenu"
 
 #: CRM/Price/Page/Set.php
 msgid "Preview Price Set"
-msgstr ""
+msgstr "Pogledaj set cena"
 
 #: CRM/Price/Page/Set.php
 msgid "Edit Price Set"
@@ -11722,7 +11722,7 @@ msgid ""
 "The requested Profile (gid=%1) is not configured to be used for 'Profile' "
 "edit and view forms in its Settings. Contact the site administrator if you "
 "need assistance."
-msgstr ""
+msgstr "Traženi Profil (gid=%1) nije podešen da se koristi za uređivanje i pregledanje formulara 'Profila'. Ukoliko vam je potrebna pomoć, kontaktirajte administratora sajta."
 
 #: CRM/Profile/Form/Edit.php
 msgid "Your information has been saved."
@@ -11804,13 +11804,13 @@ msgstr "Zapis ne postoji"
 msgid ""
 "Profile search, view and edit are not supported for Profiles which include "
 "fields for more than one record type."
-msgstr ""
+msgstr "Pretraga, pregledanje i uređivanje profila nisu mogući kod Profila u kojima se nalaze polja za više od jednog tipa zapisa."
 
 #: CRM/Profile/Form.php
 msgid ""
 "This profile is configured for contact type '%1'. It cannot be used to edit "
 "contacts of other types."
-msgstr ""
+msgstr "Ovaj profil je podešen za tip kontakta '%1'. Ne može se koristiti za uređivanje kontakata drugih tipova."
 
 #: CRM/Profile/Form.php
 msgid "Profile is not configured for the selected action."
@@ -11818,7 +11818,7 @@ msgstr "Profil nije podešen za odabranu akciju"
 
 #: CRM/Profile/Form.php
 msgid "Note: this contact may be a duplicate of an existing record."
-msgstr ""
+msgstr "Beleška: ovaj kontakt je možda duplikat postojećeg zapisa."
 
 #: CRM/Profile/Form.php
 msgid "Possible Duplicate Detected"
@@ -12284,13 +12284,13 @@ msgstr "Polje profila je sačuvano"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "Ne možete dodati ili ažurirati \"%1\" polje profila u kombinaciji sa Domaćinstvom ili Organizacijom ili bilo kojim podtipom Domaćinstva ili Organizacije."
 
 #: CRM/UF/Form/Field.php
 msgid ""
 "Cannot add or update profile field type \"%1\" with combination of subtype "
 "other than \"%1\"."
-msgstr ""
+msgstr "Ne možete dodati ili ažurirati \"%1\" tip polja profila u kombinaciji sa drugim podtipom osim sa \"%1\"."
 
 #: CRM/UF/Form/Field.php
 msgid ""
@@ -12306,7 +12306,7 @@ msgstr "Ve imate dodato polje za primarnu lokaciju ovog tipa: %1"
 msgid ""
 "View Only cannot be selected if this field is to be included on the "
 "registration form"
-msgstr ""
+msgstr "Opcija Samo za pregled ne može biti izabrana ako će ovo polje biti uključeno u formular za registraciju"
 
 #: CRM/UF/Form/Field.php
 msgid "A View Only field cannot be required"
@@ -12783,7 +12783,7 @@ msgid ""
 "received this error after submitting on online contribution or event "
 "registration - the transaction was completed, but we were unable to send the"
 " email receipt."
-msgstr ""
+msgstr "Došlo je do greške kada je CiviCRM pokušao da pošalje email (putem %1). Ako ste dobili obaveštenje o grešci nakon što ste poslali online donaciju ili registraciju za događaj - transakcija je izvršena, ali nismo uspeli da vam pošaljemo email sa računom."
 
 #: CRM/Utils/Mail.php
 msgid "The mail library returned the following error message:"
@@ -13292,7 +13292,7 @@ msgstr "Nemoguće je stupiti u kontakt sa serverom. Molimo osvežite ovu stranic
 
 #: js/crm.ajax.js
 msgid "Print window"
-msgstr ""
+msgstr "Odštampaj prozor"
 
 #: js/crm.ajax.js js/view/crm.designer.js
 msgid "%1 has not been saved."
@@ -13397,7 +13397,7 @@ msgstr "FIXME"
 msgid ""
 "Select a group if you are using this profile for adding new contacts, AND "
 "you want the new contacts to be automatically assigned to a group."
-msgstr ""
+msgstr "Izaberite grupu ukoliko koristite ovaj profil da dodate nove kontakte, a želite da novi kontakti automatski budu dodati u grupu."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -13414,7 +13414,7 @@ msgstr "Tekst sa objašnjenjem koji će biti prikazan na kraju formulara."
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
 "Note that this help text is displayed on profile create/edit screens only."
-msgstr ""
+msgstr "Uzmite u obzir da se ovaj tekst za pomoć prikazuje samo na ekranima za kreiranje/uređivanje profila."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid "Explanatory text displayed at the beginning of the form."
@@ -13428,7 +13428,7 @@ msgstr "Opcija registracije Drupal korisničkog naloga?"
 msgid ""
 "Check this box if you want to include a link in the listings to Edit profile"
 " fields. Only users with permission to edit the contact will see this link."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da u listinzima uključite link za uređivanje polja u profilu. Samo korisnici sa dozvolom za uređivanje kontakata će videti ovaj link."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -13454,7 +13454,7 @@ msgid ""
 "enter one or more email addresses here. Multiple email addresses should be "
 "separated by a comma (e.g. jane@example.org, paula@example.org). The first "
 "email address listed will be used as the FROM address in the notifications."
-msgstr ""
+msgstr "Ukoliko želite da član(ovi) vaše organizacije dobiju email sa obaveštenjem svaki put kada se ovaj Profil koristi za unos ili ažuriranje informacija o kontaktima, unesite jednu ili više email adresa ovde. Više email adresa bi trebalo odvojiti zarezom (npr. jane@example.org, paula@example.org). Prva navedena email adresa će se koristiti kao OD adresa u obaveštenjima."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -13497,7 +13497,7 @@ msgstr "Ispravite greške pre čuvanja."
 
 #: js/view/crm.designer.js
 msgid "Please correct errors before previewing."
-msgstr ""
+msgstr "Ispravite greške pre pregledanja."
 
 #: js/view/crm.designer.js
 msgid "+ Add New Field"
@@ -13568,7 +13568,7 @@ msgstr "Da li želite da nastavite?"
 msgid ""
 "Enter a descriptive name for this permission (e.g. 'Edit Advisory Board "
 "Contacts')."
-msgstr ""
+msgstr "Unesite opisno ime za ovu dozvolu (npr. 'Editovanje kontakata Upravnog odbora')."
 
 #: templates/CRM/ACL/Form/ACL.tpl
 msgid ""
@@ -15037,7 +15037,7 @@ msgstr "Dodaj još jedan OpenID"
 #: templates/CRM/Contact/Form/Inline/Phone.tpl
 #: templates/CRM/Contact/Page/Inline/Phone.tpl
 msgid "ext."
-msgstr "ext"
+msgstr "lokal"
 
 #: templates/CRM/Contact/Form/Edit/Phone.tpl
 msgid "Delete Phone Block"
@@ -21797,7 +21797,7 @@ msgstr ""
 msgid ""
 "Demographic breakdown for case clients (and or non-case contacts) in your "
 "database. Includes custom contact fields."
-msgstr ""
+msgstr "Demografsi pregled za klijente u predmetima (ili/i kontakte koji nisu povezani sa predmetima) u vašoj bazi podataka. Uključuje sopstvena polja kontakta."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Database Log Report"
