--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 13:25+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-17 09:28+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -891,7 +892,7 @@ msgstr "Mendažment vaše stranice"
 msgid ""
 "Your page requires administrator review before you can begin your "
 "fundraising efforts."
-msgstr "Ppre nego što počnete sa prikupljanjem sredstava, vašu stranicu mora da odobri administrator."
+msgstr "Pre nego što počnete sa prikupljanjem sredstava, vašu stranicu mora da odobri administrator."
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
