--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 15:08+0000\n"
+"PO-Revision-Date: 2017-02-17 13:47+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1258,7 +1258,7 @@ msgstr "Podešavanja - CiviMail"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "VERP Separator"
-msgstr ""
+msgstr "Verp razdelnik"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer Batch Limit"
