po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-02-13 10:20+0000\n"
+"PO-Revision-Date: 2017-02-17 06:19+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2939,7 +2939,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid "Release Voters"
-msgstr ""
+msgstr "Raspusti glasače"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid "%1 voters has been released."
