po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 09:54+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-17 12:26+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1705,7 +1705,7 @@ msgid ""
 "for your records. You will receieve a confirmation email with the "
 "information below.  Information about the workshops will be sent separately "
 "to each participant. Here's a summary of your transaction placed on %2:"
-msgstr ""
+msgstr "Broj vaše porudžbine je <strong>#%1</strong>.  Odštampajte ovu potvrdu zbog vaše evidencije. Dobićete email sa potvrdom sa navedenim informacijama. Informacije o radionicama će biti poslate zasebno svakom učesniku. Ovde je kratak pregled vaše transakcije za %2:"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ThankYou.tpl
 msgid ""
@@ -1715,7 +1715,7 @@ msgstr "Ukoliko imate ikakvih pitanja o statusu vaše registracije ili kupovine,
 
 #: templates/CRM/Event/Cart/Form/viewCartLink.tpl
 msgid "<a href='%1'>Return to Cart</a>"
-msgstr ""
+msgstr "<a href='%1'>Vrati se na korpu</a>"
 
 #: templates/CRM/Event/Cart/Page/ViewCart.tpl
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
@@ -1893,14 +1893,14 @@ msgstr "Da biste omogućili korisnicima da vide listu učesnika, podesite ovo po
 msgid ""
 "You will need to set Access Control permissions to include 'view event "
 "participants' for any Roles you want to access this listing."
-msgstr ""
+msgstr "Potrebne su vam dozvole za Kontrolu pristupa da biste uključili 'vidi učesnike za događaj' za bilo koju ulogu za koju želite da ima pristup ovoj listi."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "Create links to the listing page by copying the following URL, and adding it"
 " to the Event Description below and / or as a menu item or links elsewhere "
 "on your site:"
-msgstr ""
+msgstr "Kreirajte linkobe ka stranici sa listom tako što ćete kopirati sledeći URL i dodati ga u Opis događaja ispod i/ili kao stavku menija ili linkove drugde na vašem sajtu:"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1944,7 +1944,7 @@ msgid ""
 "Message&quot' is displayed when the maximum number of registrations is "
 "reached. Only participants with status types marked as 'counted' are "
 "included when checking if the event is full."
-msgstr ""
+msgstr "U suprotnom, link za registraciju je sakriven i prikazuje se &quot;Poruka za popunjen događaj&quot' kada je dostignut maksimalni broj registracija. Prilikom proveravanja da li je događaj popunjen, uključeni su samo učesnici sa tipovima statusa obeleženim kao 'prebrojani'."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Event-Full Message"
@@ -1981,7 +1981,7 @@ msgid ""
 "Include map presenting event location on event information page? (A map "
 "provider must be configured under <a href='%1'>Administer > System Settings "
 "> Mapping and Geocoding</a>)"
-msgstr ""
+msgstr "Uključi mapu sa lokacijom događaja na stranici sa informacijama o događaju? (Morate podesiti maping provajdera u <a href='%1'>Administracija > Sistemska podešavanja > Mapiranje i Geokoding</a>)"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Public Events"
@@ -1991,7 +1991,7 @@ msgstr "Javni događaji"
 msgid ""
 "When enabled, this event will be included in iCalendar feeds and displayed "
 "on your site's \"Upcoming Events\" block."
-msgstr ""
+msgstr "Kada je uključen, ovaj događaj će biti u iCalendar feed-u i prikazivaće se na vašem sajtu u odeljku \"Predstojeći događaji\"."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -2109,7 +2109,7 @@ msgid ""
 "Click <a id='quickconfig' href='#'>here</a> if you want to configure the "
 "Regular Fees below as part of a Price Set, with the added flexibility and "
 "complexity that entails."
-msgstr ""
+msgstr "Kliknite <a id='quickconfig' href='#'>ovde </a> ukoliko želite da podesite Redovne cene kao deo Seta cena sa dodatnom fleksibilnošću i složenošću."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2198,7 +2198,7 @@ msgid ""
 "can save this screen without selecting a Profile, complete the steps below "
 "and then return to <strong>Manage Events</strong> and select your new "
 "profile."
-msgstr ""
+msgstr "Ukoliko još uvek niste podesili sopstvena polja i profile za ovu svrhu, možete sačuvati ovaj ekran bez biranja Profila, obaviti korake ispod i vratiti se na strong>Menadžment događaja</strong> i odabrati novi profil."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2761,7 +2761,7 @@ msgid ""
 " names so you can review and delete these records as needed. </strong> Refer"
 " to your payment processor's documentation for information on values to use "
 "for test credit card number, security code, postal code, etc."
-msgstr ""
+msgstr "Ova stranica se trenutno prikazuje u <strong>test-drive mode</strong> verziji. Ukoliko je ovo događaj koji se naplaćuje, transakcije će biti prosleđene test serveru vašeg procesora uplate. <strong>Neće biti obavljenih finansijskih transakcija, ali zapis o kontaktu će biti kreiran ili ažuriran, kao i zapisi o donaciji koji će biti sačuvani u bazi podataka. Koristite kontakte pripremljene za testiranje sa očiglednim imenima kako biste mogli da pregledate i obrišete ove zapise po potrebi.</strong> Pogledajte dokumentaciju vašeg procesora uplata za informacije o vrednostima koje ćete koristiti za test brojeve kreditnih kartica, sigurnosni kod, poštanski kod, itd."
 
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid "including yourself"
@@ -2954,7 +2954,7 @@ msgid ""
 "/ or Registration Approval features enabled. In order to use these features "
 "you must first enable the related Participant Statuses (Administer &raquo; "
 "CiviEvent &raquo; Participant Statuses)."
-msgstr ""
+msgstr "Ovaj ekran je posebno koristan za menadžment događaja sa aktiviranim opcijama za odobravanje na Listu čekanja i / ili za registrovanje. Kako biste kotistili ove opcije prvo morate aktivirati Statuse učesnika (Administriraj &raquo; CiviEvent &raquo; Statusi učesnika)."
 
 #: templates/CRM/Event/Form/Task/ParticipantStatus.hlp
 msgid "Tip: Managing waitlisted participants"
@@ -3029,7 +3029,7 @@ msgid ""
 "'External ID' for each new contact which you can then use to match "
 "participant info such as event registration to the corresponding contact "
 "record. Then return to this screen and import the participant records."
-msgstr ""
+msgstr "Import učesnika zahteva da svaka osoba, domaćinstvo ili organizacija već postoji kao zapis o kontaktu u vašoj CiviCRM bazi. Ukoliko treba da uradite import informacija o učesniku za koje zapisi o kontaktima još uvek nisu dodati u CiviCRM - to ćete učiniti u 2 koraka. Prvo, upotrebite <strong>Import Kontakata</strong> da biste dodali zapise o kontaktima. Ukoliko je moguće, za svaki novi kontakt upotrebite 'Eksterni ID' koji ćete onda upotrebiti kako biste povezali informacije o učesnicima, kao što su registracija za događaj, sa odgovarajućim zapisom o kontaktu. Zatim se vratite na ovaj ekran i uradite import zapisa o učesnicima."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Matching Participant Data to Contacts"
@@ -3087,7 +3087,7 @@ msgstr "Ukoliko ažurirate postojeće učesnike, neophodno je da uključite kolo
 msgid ""
 "The Event Import Wizard allows you to easily upload event participation data"
 " such as event registrations from other applications into CiviCRM."
-msgstr ""
+msgstr "Event Import Wizard omogućava brzo postavljanje podataka o učešću na događaju kao što su registracije za događaj iz drugih aplikacija u CiviCRM."
 
 #: templates/CRM/Event/Import/Form/DataSource.tpl
 msgid ""
@@ -3210,7 +3210,7 @@ msgid ""
 "about events and optionally register online. You can create <a "
 "href='%1'><strong>new events</strong></a> and <a href='%2'><strong>manage "
 "existing events</strong></a>."
-msgstr ""
+msgstr "CiviEvent vam omogućava da kreirate prilagođenu stranicu(e) za korisnike gde će se informisati o događajima i po izboru registrovati online. Možete kreirati <a href='%1'><strong>nove događaje</strong></a> i<a href='%2'><strong>upravljati postojećim događajima</strong></a>."
 
 #: templates/CRM/Event/Page/DashBoard.hlp
 msgid ""
@@ -3220,7 +3220,7 @@ msgid ""
 "click on the <strong>New Event</strong> link. You can also <a "
 "href='%2'><strong>import batches of participants</strong></a> from other "
 "sources."
-msgstr ""
+msgstr "Takođe možete unositi i pratiti offline Događaje. Da biste ručno uneli događaje za pojedince, upotrebite <a href='%1'>Nađi kontakte</a> da biste locirali kontakt. Zatim kliknite na <strong>Pogledaj</strong> da biste videli kratak pregled kontakta i kliknite na link <strong>Novi događaj</strong>. Možete uraditi i <a href='%2'><strong>import grupa učesnika</strong></a> iz drugih izvora."
 
 #: templates/CRM/Event/Page/DashBoard.hlp
 msgid ""
@@ -3230,7 +3230,7 @@ msgid ""
 "<strong>Participants count</strong> to see a list of participants. To run "
 "your own customized searches - click <a href='%1'>Find Participants</a>. You"
 " can search by Participant Name, Event, Date Range and Status."
-msgstr ""
+msgstr "Kratak pregled događaja pruža pregled do deset zakazanih i nedavno održanih <strong>Događaja</strong>. Kliknite na <strong>Ime događaja</strong> da biste videli događaj onako kako će biti prikazan posetiocima sajta. Kliknite na <strong>Broj učesnika</strong> da biste videli listu učesnika. Da biste pokrenuli svoje prilagođene pretrage - kliknite <a href='%1'>Nađi učesnike</a>. Možete pretraživati po Imenu učesnika, Događaju, Rasponu datuma i Statusu."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
